welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:19: error: Unmatched closing brace '}' ignored here
}
^PictureMono:22: error: eof expected but '}' found.
}
^